# agentic-rust

./: .env.example  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
config/: prompts.toml
crates/agent/: Cargo.toml
crates/agent/src/: builder.rs  lib.rs  prompts.rs  rag_agent.rs  react_agent.rs  rig_integration.rs  sales_agent.rs
crates/agent/src/crew/: agent.rs  config.rs  crew.rs  examples.rs  flow.rs  integration.rs  memory.rs  mod.rs  process.rs  prompts.rs  task.rs  tests.rs  tools.rs
crates/agent/src/tools/: brochure.rs  company_info.rs  mod.rs  product_search.rs  search.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  queue.rs  state.rs
crates/api/src/handlers/: mod.rs
crates/api/src/middleware/: auth.rs  logging.rs  mod.rs
crates/api/src/routes/: brochures.rs  chat.rs  documents.rs  files.rs  health.rs  mod.rs  products.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  error.rs  langfuse.rs  lib.rs  prompt_config.rs  queue.rs
crates/common/src/models/: agent.rs  document.rs  job.rs  mod.rs  product.rs
crates/db/: Cargo.toml
crates/db/migrations/00000000000001_initial/: down.sql  up.sql
crates/db/migrations/00000000000002_products_brochures/: down.sql  up.sql
crates/db/migrations/2024-12-18-000001_initial_schema/: down.sql  up.sql
crates/db/migrations/2024-12-18-000002_products_brochures/: down.sql  up.sql
crates/db/migrations/2024-12-18-000003_messages_and_reactions/: down.sql  up.sql
crates/db/migrations/2024-12-18-000004_merge_reactions_into_messages/: down.sql  up.sql
crates/db/migrations/2024-12-18-000005_add_tool_role/: down.sql  up.sql
crates/db/src/: lib.rs  models.rs  pool.rs  schema.rs
crates/db/src/repositories/: conversation.rs  document.rs  job.rs  message.rs  mod.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: chunker.rs  embeddings.rs  lib.rs  retriever.rs  vector_store.rs
crates/storage/: Cargo.toml
crates/storage/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  presigned.rs
crates/worker/: Cargo.toml
crates/worker/src/: consumer.rs  lib.rs  main.rs  queue.rs
crates/worker/src/jobs/: embed_document.rs  index_document.rs  mod.rs  process_chat.rs
crates/worker/src/processors/: ai_processor.rs  mod.rs
migrations/: 20241218000001_initial.sql  20241218000002_products_brochures.sql
