[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/rag-core",
    "crates/agent",
    "crates/api",
    "crates/worker",
    "crates/db",
    "crates/storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Agentic Team"]

[workspace.dependencies]
# Internal crates
common = { path = "crates/common" }
rag-core = { path = "crates/rag-core" }
agent = { path = "crates/agent" }
db = { path = "crates/db" }
storage = { path = "crates/storage" }

# LLM & AI
rig-core = "0.5"
rig-qdrant = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Message queue
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
apalis = { version = "0.6" }
apalis-redis = "0.6"

# Vector database
qdrant-client = "1.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
dotenvy = "0.15"
config = "0.14"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
