[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
rag-core = { workspace = true }
rig-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
