[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
rag-core = { workspace = true }
agent = { workspace = true }
db = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }

redis = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
qdrant-client = { workspace = true }
sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
