[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
rag-core = { workspace = true }
agent = { workspace = true }
db = { workspace = true }
storage = { workspace = true }

axum = { workspace = true }
axum-extra = { version = "0.10", features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
bytes = "1"

redis = { workspace = true }
deadpool-redis = { workspace = true }
qdrant-client = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mime_guess = "2"
