[package]
name = "rag-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true }
rig-core = { workspace = true }
qdrant-client = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
