[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S3-compatible object storage client for RustFS, MinIO, AWS S3"

[dependencies]
common = { workspace = true }

# S3 client
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mime_guess = "2.0"
bytes = "1.0"
sha2 = "0.10"
hex = "0.4"
